<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_beranda"
        android:icon="@drawable/ic_beranda"
        android:title="@string/title_beranda" />

    <item
        android:id="@+id/navigation_kalender"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_kalender" />

    <item
        android:id="@+id/navigation_diskusi"
        android:icon="@drawable/ic_diskusi"
        android:title="@string/title_diskusi" />

    <item
        android:id="@+id/navigation_tantangan"
        android:icon="@drawable/ic_tantangan"
        android:title="@string/title_tantangan" />

    <item
        android:id="@+id/navigation_akun"
        android:icon="@drawable/ic_akun"
        android:title="@string/title_akun" />

</menu>