<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.example.apinovasi.ui.beranda.BerandaFragment"
        android:label="@string/title_beranda"
        tools:layout="@layout/fragment_beranda" />

    <fragment
        android:id="@+id/navigation_diskusi"
        android:name="com.example.apinovasi.ui.diskusi.DiskusiFragment"
        android:label="@string/title_diskusi"
        tools:layout="@layout/fragment_diskusi" />

    <fragment
        android:id="@+id/navigation_kalender"
        android:name="com.example.apinovasi.ui.kalender.KalenderFragment"
        android:label="@string/title_kalender"
        tools:layout="@layout/fragment_kalender" />

    <fragment
        android:id="@+id/navigation_tantangan"
        android:name="com.example.apinovasi.ui.tantangan.TantanganFragment"
        android:label="@string/title_tantangan"
        tools:layout="@layout/fragment_tantangan" />

    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.example.apinovasi.ui.akun.AkunFragment"
        android:label="@string/title_akun"
        tools:layout="@layout/fragment_akun" />
</navigation>