<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="24dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/roboto_medium"
        android:text="Nominal"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nominal_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/topup_nominal_1"
        android:textColor="@color/dark_grey"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="24dp"
        android:background="#CACACA" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nominal_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/topup_nominal_2"
        android:textColor="@color/dark_grey"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="#CACACA" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nominal_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/topup_nominal_3"
        android:textColor="@color/dark_grey"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="#CACACA" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nominal_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/topup_nominal_4"
        android:textColor="@color/dark_grey"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="#CACACA" />

</LinearLayout>