<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@color/pure_white"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_num_referral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/txt_num_2"
                android:textColor="@color/dark_grey"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_avatar_referral"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:src="@drawable/avatar_dummy2"
                app:civ_border_color="@color/dark_blue"
                app:civ_border_width="1dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_num_referral"
                app:layout_constraintStart_toEndOf="@id/tv_num_referral"
                app:layout_constraintTop_toTopOf="@id/tv_num_referral" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_nama_referral"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/txt_dummy_name2"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/tv_tgl_referral"
                app:layout_constraintStart_toEndOf="@id/iv_avatar_referral"
                app:layout_constraintTop_toTopOf="@id/iv_avatar_referral" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_tgl_referral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/txt_dummy_tgl2"
                android:textColor="#969CA2"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_avatar_referral"
                app:layout_constraintStart_toStartOf="@id/tv_nama_referral"
                app:layout_constraintTop_toBottomOf="@id/tv_nama_referral"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_xp_referral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/txt_num_4"
                    android:textColor="@android:color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="11dp"
                    android:layout_height="7dp"
                    android:layout_marginStart="2dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_ap_xp" />

                <TextView
                    android:id="@+id/ic_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/txt_plus"
                    android:textColor="@android:color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/tv_poin_referral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/txt_num_200"
                    android:textColor="@android:color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_ap_poin" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>